# clipper2-sys

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
cpp/: clipper2_sys_bridge.cpp  clipper2_sys_bridge.hpp
src/: clipper2.rs  clipper_d.rs  clipper_offset.rs  cxx_bridge.rs  double.rs  int64.rs  lib.rs  macros.rs  offset.rs  path_d.rs  paths_blob.rs  paths_d.rs  poly_path.rs  poly_tree_d.rs  tests.rs
src/clipper64/: clipper.rs  mod.rs  path.rs  paths.rs
src/clipperd/: clipper.rs  mod.rs  path.rs  paths.rs
src/double/: clipper_d.rs  path_d.rs  paths_d.rs  poly_tree_d.rs
src/int64/: clipper_64.rs  path_64.rs  paths_64.rs  poly_tree_64.rs
