[package]
name = "clipper2-sys"
version = "0.4.0"
authors = ["songhuaixu <songhuaixu@gmail.com>"]
edition = "2021"
license = "ISC"
readme = "README.md"
repository = "https://github.com/songhuaixu/clipper2-sys"
description = "Polygon Clipping and Offsetting (Clipper2 wrapper)"
keywords = ["polygon", "boolean", "clip", "offset", "clipper2"]
categories = ["algorithms", "external-ffi-bindings"]

[features]
generate-bindings = [ "bindgen"]
update-bindings = [ "generate-bindings"]

[dependencies]
libc = "0.2.164"

[build-dependencies]
bindgen = { version = "0.70.1", optional = true }
cc = "1.2.0"