[package]
name = "clipper2-sys"
version = "1.0.0"
authors = ["songhuaixu <songhuaixu@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/songhuaixu/clipper2-sys"
documentation = "https://docs.rs/clipper2-sys"
description = "Polygon Clipping and Offsetting (Clipper2 wrapper)"
keywords = ["polygon", "boolean", "clip", "offset", "clipper2"]
categories = ["algorithms", "external-ffi-bindings"]

[dependencies]
cxx = "1"

[build-dependencies]
cxx-build = "1"
